changed permalinks structure

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 markdown: kramdown
 highlighter: pygments
-pygments:    true
 
 markdown_ext:  markdown,mkdown,mkdn,mkd,md
 textile_ext:   textile
+
+permalink: /blog/:categories/:title
