added Hack Design course to resources

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -16,6 +16,8 @@
   links:
     - name: Web Field Manual
       url: http://webfieldmanual.com/
+    - name: Hack Design - Free UI/UX Curriculum
+      url: https://hackdesign.org/lessons
 - type: CSS
   links:
     - name: MDN - CSS
