added resume and UX resource

--- a/_data/resources.yml
+++ b/_data/resources.yml
@@ -18,6 +18,8 @@
       url: http://webfieldmanual.com/
     - name: Hack Design - Free UI/UX Curriculum
       url: https://hackdesign.org/lessons
+    - name: 24 Free eBooks on UX
+      url: http://www.usefulusability.com/the-ultimate-list-of-24-free-ebooks-on-ux-and-interface-design/
 - type: CSS
   links:
     - name: MDN - CSS
