--- a/_data/users.yml
+++ b/_data/users.yml
@@ -55,6 +55,7 @@
   city: Boulder
   state: CO
   postal: 80304
+  resume: https://drive.google.com/file/d/0B-g6SQ_1Mb5LdU5WeVNqRDFFUlk/edit?usp=sharing
 
 - userid: RikJohnson
   student: true
