--- a/_data/users.yml
+++ b/_data/users.yml
@@ -99,4 +99,16 @@
   city: Longmont
   state: CO
   postal: 80503
+  
+  - userid: LauraR6561
+  student: true
+  session: spring2014
+  name: Laura Rutz
+  github: LauraR6561
+  linkedin: laurarutz
+  email: LauraR6561@rocketmail.com
+  city: Denver
+  state: CO
+  postal: 80221
+  resume: http://laurar6561.github.io/resume.html
 
