--- a/_data/users.yml
+++ b/_data/users.yml
@@ -100,3 +100,14 @@
   state: CO
   postal: 80503
 
+- userid: schung
+  student: true
+  session: spring2014
+  name: Sandra Chung
+  github: sandramchung
+  linkedin: sandramchung
+  email: sandra@sandrachung.com
+  city: Boulder
+  state: CO
+  postal: 80301
+  resume: http://sandramchung.github.io/resume.html
