added sandra's twitter info to user list

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -105,6 +105,7 @@
   session: spring2014
   name: Sandra Chung
   github: sandramchung
+  twitter: sandramchung
   linkedin: sandramchung
   email: sandra@sandrachung.com
   city: Boulder
