renamed resume files

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -43,7 +43,8 @@
   city: Greeley
   state: CO
   postal: 80634
-
+  resume: ..\students\spring2014\jcyoder\resume\ResumeJanetYoderMay142014.docx
+  
 - userid: stratcom
   student: true
   session: spring2014
