Added myself to student list

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -110,3 +110,14 @@
   city: Lafayette
   state: CO
 
+- userid: rhimes
+  student: true
+  session: spring2014
+  name: Roberta Himes
+  github: bertaBoulder
+  linkedin: robertahimes
+  email: roberta@coloradogirl.org
+  city: Englewood
+  state: CO
+  postal: 80113
+  
