--- a/_data/users.yml
+++ b/_data/users.yml
@@ -96,6 +96,7 @@
   session: spring2014
   name: Jamal Abdelmawla
   github: jmawla
+  linkedin: jamalabdelmawla
   email: jmawla@yahoo.com
   city: Longmont
   state: CO
