--- a/_data/users.yml
+++ b/_data/users.yml
@@ -178,6 +178,7 @@
   session: spring2014
   name: Tiffany Grays
   github: tgrays2001
+	linkedin: tgrays2001
   email: tgrays2001@gmail.com
   city: Aurora
   state: CO
