added resume - Jamal

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -101,7 +101,8 @@
   city: Longmont
   state: CO
   postal: 80503
-  
+  resume: https://drive.google.com/file/d/0B2hZoxm5va8eQm9BQ1FjX0xuN0E/edit?usp=sharing
+
 - userid: w4zeepi0
   student: true
   session: spring2014
