--- a/_data/users.yml
+++ b/_data/users.yml
@@ -135,6 +135,7 @@
   city: Englewood
   state: CO
   postal: 80113
+  resume: http://bertaBoulder.github.io/resume.html
   
 - userid: sandramchung
   student: true
