Add bertaBoulder homepage

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -149,6 +149,7 @@
   city: Englewood
   state: CO
   postal: 80113
+  website: http://bertaBoulder.github.io/index.html
   resume: http://bertaBoulder.github.io/resume.html
   
 - userid: sandramchung
