updated website field for mdaehnick

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -23,6 +23,7 @@
   resume: http://digininjadev.github.io/downloads/Keiichi%20S%20Lindley%20IT%20Resume.pdf
 
 - userid: mdaehnick
+  website: http://mdaehnick.github.io
   student: true
   session: spring2014
   name: Mike Daehnick
