--- a/_data/users.yml
+++ b/_data/users.yml
@@ -83,6 +83,7 @@
   city: Fort Collins
   state: CO
   postal: 80525
+  resume: https://www.dropbox.com/s/z09szyct0zi7zrv/Rik%20Johnson%20webD%20res.docx
 
 - userid: jwgilbert
   student: true
