--- a/_data/users.yml
+++ b/_data/users.yml
@@ -96,6 +96,7 @@
   city: Fort Collins
   state: CO
   postal: 80526
+  website: jwgilbert.github.io
   resume: http://grade-vi.com/resume/jeffery_w_gilbert_resume.html
 
 - userid: spencer1230
