--- a/_data/users.yml
+++ b/_data/users.yml
@@ -9,8 +9,25 @@
   state: CO
   postal: 80521
 
+
+- userid: c43
+  student: true
+  session: summer2014
+  name: Cameron Donahue
+  github: c43
+  twitter: #
+  linkedin: https://www.linkedin.com/in/camerondonahue
+  email: camerondonahue@gmail.com
+  website: http://www.c43@github.io
+  phone: 720-987-4989
+  city: Boulder
+  state: CO
+  postal: 80301
+
+
 - userid: keiichi
   student: true
+  session: spring2014
   name: Keiichi Hiramatsu
   github: digininjadev
   linkedin: https://www.linkedin.com/pub/sam-lindley/18/ab4/9b6
@@ -28,7 +45,7 @@
   session: spring2014
   name: Mike Daehnick
   github: mdaehnick
-  linkedin: www.linkedin.com/in/mdaehnick
+  linkedin: https://www.linkedin.com/in/mdaehnick
   email: mdaehnick@yahoo.com
   phone: 303-666-6468
   city: Erie
@@ -41,7 +58,7 @@
   session: spring2014
   name: Evan Moore
   github: etmoore
-  linkedin: www.linkedin.com/in/etmoore1
+  linkedin: https://www.linkedin.com/in/etmoore1
   email: etmoore@gmail.com
   city: Loveland
   state: CO
@@ -53,7 +70,7 @@
   session: spring2014
   name: Janet Yoder
   github: jcyoder
-  linkedin: www.linkedin.com/in/janetyoder
+  linkedin: https://www.linkedin.com/in/janetyoder
   email: kajcyoder@comcast.net
   city: Greeley
   state: CO
@@ -65,7 +82,7 @@
   session: spring2014
   name: Mike Stratton
   github: stratcom
-  linkedin: www.linkedin.com/in/mhstratton
+  linkedin: https://www.linkedin.com/in/mhstratton
   twitter: mhstratton
   email: mhstratton@gmail.com
   city: Boulder
@@ -78,7 +95,7 @@
   session: spring2014
   name: Rik Johnson
   github: RikJohnson
-  linkedin: www.linkedin.com/in/rikrjohnson
+  linkedin: https://www.linkedin.com/in/rikrjohnson
   twitter: RikRJohnson
   email: rikRjohnson@comcast.net
   city: Fort Collins
@@ -91,7 +108,7 @@
   session: spring2014
   name: Jeff Gilbert
   github: jwgilbert
-  linkedin: www.linkedin.com/in/jeffwgilbert
+  linkedin: https://www.linkedin.com/in/jeffwgilbert
   email: jwgwebdev@gmail.com
   city: Fort Collins
   state: CO
@@ -114,7 +131,7 @@
   session: spring2014
   name: Jamal Abdelmawla
   github: jmawla
-  linkedin: www.linkedin.com/in/jamalabdelmawla
+  linkedin: https://www.linkedin.com/in/jamalabdelmawla
   email: jmawla@yahoo.com
   city: Longmont
   state: CO
@@ -135,7 +152,7 @@
   session: spring2014
   name: Laura Rutz
   github: LauraR6561
-  linkedin: laurarutz
+  linkedin: https://www.linkedin.com/in/laurarutz
   email: LauraR6561@rocketmail.com
   city: Denver
   state: CO
@@ -147,7 +164,7 @@
   session: spring2014
   name: Roberta Himes
   github: bertaBoulder
-  linkedin: www.linkedin.com/in/robertahimes
+  linkedin: https://www.linkedin.com/in/robertahimes
   email: roberta@coloradogirl.org
   city: Englewood
   state: CO
@@ -161,7 +178,7 @@
   name: Sandra Chung
   github: sandramchung
   twitter: sandramchung
-  linkedin: www.linkedin.com/in/sandramchung
+  linkedin: https://www.linkedin.com/in/sandramchung
   email: sandra@sandrachung.com
   city: Boulder
   state: CO
@@ -174,9 +191,9 @@
   name: Andy Goldman
   github: AndyGoldman
   twitter: Andy_Goldman
-  linkedin: www.linkedin.com/in/andygoldman
+  linkedin: https://www.linkedin.com/in/andygoldman
   email: andy.goldman@hotmail.com
-	website: http://www.andygoldman@github.io
+  website: http://www.andygoldman@github.io
   phone: 970-472-5482
   city: Fort Collins
   state: CO
@@ -187,7 +204,7 @@
   session: spring2014
   name: Jacob Greenfield
   github: jdgreenfield
-  linkedin: www.linkedin.com/pub/jacob-greenfield/41/7ba/478
+  linkedin: https://www.linkedin.com/pub/jacob-greenfield/41/7ba/478
   email: jacob.d.greenfield@gmail.com
   city: Boulder
   state: CO
@@ -223,5 +240,7 @@
   session: spring2014
   name: Troy Sol
   github: TDSolberg
+
+
 
 
