fixed linked links

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -4,7 +4,7 @@
   session: summer2014
   name: Dave Webb
   github: dlwebb
-  linkedin: www.linkedin.com/in/dlwebb
+  linkedin: https://www.linkedin.com/in/dlwebb
   twitter: DaveWebb
   email: davewebb5280@gmail.com
   phone: 303-324-3233
@@ -29,7 +29,7 @@
   session: summer2014
   name: Kristi N. Green
   github: kristing40
-  linkedin: www.linkedin.com/in/kristingreenwebdev/
+  linkedin: https://www.linkedin.com/in/kristingreenwebdev/
   email: kngreen40@gmail.com
   website: 
   phone: 970-226-0255
