--- a/_data/users.yml
+++ b/_data/users.yml
@@ -1,3 +1,18 @@
+- userid: steveperrito
+  website: http://www.OptAllure.com
+  student: true
+  session: summer2014
+  name: Steve Perry
+  github: steveperrito
+  linkedin: https://www.linkedin.com/in/steveperry33
+  twitter: steveperrito
+  email: steveperrito@gmail.com
+  phone: 720-988-6201
+  city: Lafayette
+  state: CO
+  postal: 80026
+  resume: coming soon...
+
 - userid: dlwebb
   website: http://davewebbonline.com
   student: true
