--- a/_data/users.yml
+++ b/_data/users.yml
@@ -23,7 +23,7 @@
   city: Fort Collins
   state: CO
   postal: 80521
-  
+
 - userid: kristing40
   student: true
   session: summer2014
@@ -31,7 +31,7 @@
   github: kristing40
   linkedin: https://www.linkedin.com/in/kristingreenwebdev/
   email: kngreen40@gmail.com
-  website: 
+  website:
   phone: 970-226-0255
   city: Fort Collins
   state: CO
@@ -55,6 +55,7 @@
   student: true
   session: spring2014
   name: Evan Moore
+  employed: true
   github: etmoore
   linkedin: https://www.linkedin.com/in/etmoore1
   email: etmoore@gmail.com
