--- a/_data/users.yml
+++ b/_data/users.yml
@@ -3,7 +3,7 @@
   session: summer2014
   name: Emily Miller
   github: esm1503
-  linkedin: www.linkedin.com/pub/emily-miller/65/16a/720
+  linkedin: http://www.linkedin.com/pub/emily-miller/65/16a/720
   twitter:
   email: esm.dsgn@gmail.com
   phone: 970-402-3629
