updated LinkedIn link

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -18,7 +18,7 @@
   session: summer2014
   name: Angelique Godinez
   github: Angelique-G
-  linkedin: www.linkedin.com/in/agodinez/
+  linkedin: https://www.linkedin.com/in/agodinez/
   twitter:
   email: a.n.godinez.co@gmail.com
   phone: 503-740-3507
