--- a/_data/users.yml
+++ b/_data/users.yml
@@ -28,7 +28,7 @@
   resume:
 
 - userid: EBHeadrick
-  website: EBHeadrick.github.io
+  website: https://EBHeadrick.github.io
   student: true
   session: summer2014
   name: Ellen B Headrick
