--- a/_data/users.yml
+++ b/_data/users.yml
@@ -1,12 +1,12 @@
 - userid: saffirefox
   website: http://www.SaffireFox.com
   student: true
-  session: Summer2014
+  session: summer2014
   name: Ann Marie Eisele
   github: saffirefox
   linkedin: https://www.linkedin.com/pub/ann-marie-eisele/22/454/40
   twitter:
-  email: 531eis@gmail.com
+  email: ann@saffirefox.com
   phone: 970-669-1027
   city: Loveland
   state: CO
