updated my resume

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -84,7 +84,7 @@
   city: Lafayette
   state: CO
   postal: 80026
-  resume: ""
+  resume: http://steveperrito.github.io
 
 - userid: dlwebb
   website: http://davewebbonline.com
