added Dropbox url for my resume to users.yml so resume can be accessed on WebDevBootCamp.github.io

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -11,6 +11,7 @@
   city: Loveland
   state: CO
   postal: 80538
+  resume: https://www.dropbox.com/s/l2xye5oq2jv0b6n/resume.pdf?dl=0
 
 - userid: esm1503
   student: true
