--- a/_data/users.yml
+++ b/_data/users.yml
@@ -93,14 +93,14 @@
   session: summer2014
   name: Lily Ribeiro
   github: raptarrin
-  linkedin: www.linkedin.com/pub/lily-ribeiro/b/92a/597/
+  linkedin: http://www.linkedin.com/pub/lily-ribeiro/b/92a/597
   twitter: 505stop
   email: lily.stobie@gmail.com
   phone: 505-918-0233
   city: Longmont
   state: CO
   postal: 80504
-  resume: coming soon
+  resume:
 
 - userid: steveperrito
   website: http://www.OptAllure.com
