added resume and website, updated linkedin link for Emily

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -43,18 +43,19 @@
   resume: http://www.rebeccawest.net/wp-content/uploads/2014/09/RWest_onlineResume.docx
 
 - userid: esm1503
+  website: http://esm1503.github.io/
   student: true
   session: summer2014
   name: Emily Miller
   github: esm1503
-  linkedin: http://www.linkedin.com/pub/emily-miller/65/16a/720
+  linkedin: http://www.linkedin.com/in/esmdsgn
   twitter:
   email: esm.dsgn@gmail.com
   phone: 970-402-3629
   city: Fort Collins
   state: CO
   postal: 80524
-  resume:
+  resume: https://drive.google.com/file/d/0Bx-RexW9Tok5NC1rZ0g0azdsMUk/edit?usp=sharing
 
 
 - userid: Angelique-G
