Updated sam's employment status to true

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -12,6 +12,7 @@
   state: CO
   postal: 80521
   resume: https://dl.dropboxusercontent.com/u/2087103/Litschert_Resume_2014Sept.pdf
+  employed: true
 
 - userid: saffirefox
   website: http://www.SaffireFox.com
