Add to student website

--- a/_data/users.yml
+++ b/_data/users.yml
@@ -4,7 +4,7 @@ session: summer2014
 name: Melissa Woolf
 employed: false
 github: mywoolf
-linkedin: http://www.linkedin.com/pub/melissa-woolf/a4/598/a8/
+linkedin: https://www.linkedin.com/in/mwoolfwebdev
 twitter: 
 email: mywoolf@comcast.net
 phone: 303-906-8261
