--- a/_data/users.yml
+++ b/_data/users.yml
@@ -407,3 +407,15 @@
   session: spring2014
   name: Troy Sol
   github: TDSolberg
+
+  userid: emddutton 
+  student: true
+  session: fall 2014
+  name: Beth Dutton
+  github: emddutton 
+  linkedin: 
+  email: emddutton@gmail.com
+  city: Westminster
+  state: CO
+  postal: 80031
+  resume:
